[package]
name = "kas_tutorial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "hello"
path = "src/hello.rs"
[[bin]]
name = "counter"
path = "src/counter.rs"
[[bin]]
name = "calculator"
path = "src/calculator.rs"
[[bin]]
name = "async-event"
path = "src/async-event.rs"

[dependencies]
env_logger = "0.10.0"
kas = "0.13.0"
